# PGxIntegrator

./: .gitignore  LICENSE  README.md  pgxintegrator.py  pyproject.toml  requirements.txt
src/pgxintegrator/: aldy.py  cli.py  config.py  gene_registry.py  manifests.py  prepare.py  split.py
testdata/example_dataset/: README.md
testdata/example_dataset/array/: VKORC1_array_hg19.vcf.gz.csi  chr10_array_hg19.vcf.gz.csi
testdata/example_dataset/configs/: example_config.yaml
testdata/example_dataset/configs/resources/: gene_registry_hg38.tsv
testdata/example_dataset/manifests/: dataset_manifest.tsv  gene_list.tsv  sample_manifest.tsv
testdata/example_dataset/wes/: VKORC1_wes_hg38.vcf.gz.csi  chr10_wes_hg38.vcf.gz.csi
